# MAF-AGUI-Azure-Template

./: .dockerignore  .env.example  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  Dockerfile  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: azure-static-web-apps-happy-bay-03eea5e00.yml  mafagent-AutoDeployTrigger-b7453a48-7f9f-43c8-aa2a-3d84ec8c72c8.yml  mafagent-deploy.yml
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
src/: exceptions.py
src/api/: README.md
src/db/: cosmos_chat_store.py
src/schemas/: __init__.py  flight.py
src/services/: agent.py  tools.py  workflow.py
tests/: conftest.py  test_api.py  test_cosmos.py  test_cosmos_chat_store.py  test_exceptions.py  test_middleware.py  test_tools.py  test_workflow.py
